packages/grammar/out/py/LanguageParser.py
# Generated from grammar/Language.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class LanguageParser(Parser):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "','",
        "'.'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "'['",
        "']'",
        "'..'",
        "';'",
        "<INVALID>",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'='",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'<'",
        "'>'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "LPAREN",
        "RPAREN",
        "LBRACE",
        "RBRACE",
        "LBRACK",
        "RBRACK",
        "RANGE",
        "SEMI",
        "ASSIGN",
        "PLUS",
        "MINUS",
        "MUL",
        "DIVOP",
        "EQ",
        "NEQ",
        "LE",
        "GE",
        "LT",
        "GT",
        "FOR_KW",
        "WHILE_KW",
        "IF_KW",
        "THEN_KW",
        "ELSE_KW",
        "BEGIN_KW",
        "END_KW",
        "TO_KW",
        "DO_KW",
        "CALL_KW",
        "AND_KW",
        "OR_KW",
        "NOT_KW",
        "TRUE_KW",
        "FALSE_KW",
        "NULL_KW",
        "LENGTH_KW",
        "DIV_KW",
        "MOD_KW",
        "STRING",
        "CLASS_KW",
        "RETURN_KW",
        "REPEAT_KW",
        "UNTIL_KW",
        "PRINT_KW",
        "ID",
        "INT",
        "WS",
        "LINE_COMMENT",
        "SL_COMMENT",
    ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_attrList = 2
    RULE_procDef = 3
    RULE_paramList = 4
    RULE_param = 5
    RULE_arrayParam = 6
    RULE_arrayIndex = 7
    RULE_arrayDim = 8
    RULE_objectParam = 9
    RULE_stmt = 10
    RULE_block = 11
    RULE_assignmentStmt = 12
    RULE_declVectorStmt = 13
    RULE_callStmt = 14
    RULE_printStmt = 15
    RULE_argList = 16
    RULE_repeatStmt = 17
    RULE_returnStmt = 18
    RULE_ifStmt = 19
    RULE_whileStmt = 20
    RULE_forStmt = 21
    RULE_lvalue = 22
    RULE_fieldAccess = 23
    RULE_indexSuffix = 24
    RULE_expr = 25
    RULE_orExpr = 26
    RULE_andExpr = 27
    RULE_relExpr = 28
    RULE_addExpr = 29
    RULE_mulExpr = 30
    RULE_unaryExpr = 31
    RULE_primary = 32
    RULE_lengthCall = 33
    RULE_callExpr = 34

    ruleNames = [
        "program",
        "classDef",
        "attrList",
        "procDef",
        "paramList",
        "param",
        "arrayParam",
        "arrayIndex",
        "arrayDim",
        "objectParam",
        "stmt",
        "block",
        "assignmentStmt",
        "declVectorStmt",
        "callStmt",
        "printStmt",
        "argList",
        "repeatStmt",
        "returnStmt",
        "ifStmt",
        "whileStmt",
        "forStmt",
        "lvalue",
        "fieldAccess",
        "indexSuffix",
        "expr",
        "orExpr",
        "andExpr",
        "relExpr",
        "addExpr",
        "mulExpr",
        "unaryExpr",
        "primary",
        "lengthCall",
        "callExpr",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    LPAREN = 3
    RPAREN = 4
    LBRACE = 5
    RBRACE = 6
    LBRACK = 7
    RBRACK = 8
    RANGE = 9
    SEMI = 10
    ASSIGN = 11
    PLUS = 12
    MINUS = 13
    MUL = 14
    DIVOP = 15
    EQ = 16
    NEQ = 17
    LE = 18
    GE = 19
    LT = 20
    GT = 21
    FOR_KW = 22
    WHILE_KW = 23
    IF_KW = 24
    THEN_KW = 25
    ELSE_KW = 26
    BEGIN_KW = 27
    END_KW = 28
    TO_KW = 29
    DO_KW = 30
    CALL_KW = 31
    AND_KW = 32
    OR_KW = 33
    NOT_KW = 34
    TRUE_KW = 35
    FALSE_KW = 36
    NULL_KW = 37
    LENGTH_KW = 38
    DIV_KW = 39
    MOD_KW = 40
    STRING = 41
    CLASS_KW = 42
    RETURN_KW = 43
    REPEAT_KW = 44
    UNTIL_KW = 45
    PRINT_KW = 46
    ID = 47
    INT = 48
    WS = 49
    LINE_COMMENT = 50
    SL_COMMENT = 51

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LanguageParser.EOF, 0)

        def classDef(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ClassDefContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ClassDefContext, i)

        def procDef(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ProcDefContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ProcDefContext, i)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.StmtContext)
            else:
                return self.getTypedRuleContext(LanguageParser.StmtContext, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):

        localctx = LanguageParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 42:
                self.state = 70
                self.classDef()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 237496822662176) != 0:
                self.state = 78
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.procDef()
                    pass

                elif la_ == 2:
                    self.state = 77
                    self.stmt()
                    pass

                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(LanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDefContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_KW(self):
            return self.getToken(LanguageParser.CLASS_KW, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def LBRACE(self):
            return self.getToken(LanguageParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LanguageParser.RBRACE, 0)

        def attrList(self):
            return self.getTypedRuleContext(LanguageParser.AttrListContext, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_classDef

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterClassDef"):
                listener.enterClassDef(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitClassDef"):
                listener.exitClassDef(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitClassDef"):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)

    def classDef(self):

        localctx = LanguageParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(LanguageParser.CLASS_KW)
            self.state = 86
            self.match(LanguageParser.ID)
            self.state = 87
            self.match(LanguageParser.LBRACE)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 47:
                self.state = 88
                self.attrList()

            self.state = 91
            self.match(LanguageParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttrListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(LanguageParser.ID)
            else:
                return self.getToken(LanguageParser.ID, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_attrList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAttrList"):
                listener.enterAttrList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAttrList"):
                listener.exitAttrList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAttrList"):
                return visitor.visitAttrList(self)
            else:
                return visitor.visitChildren(self)

    def attrList(self):

        localctx = LanguageParser.AttrListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attrList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.match(LanguageParser.ID)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == 47):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProcDefContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext, 0)

        def paramList(self):
            return self.getTypedRuleContext(LanguageParser.ParamListContext, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_procDef

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProcDef"):
                listener.enterProcDef(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProcDef"):
                listener.exitProcDef(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProcDef"):
                return visitor.visitProcDef(self)
            else:
                return visitor.visitChildren(self)

    def procDef(self):

        localctx = LanguageParser.ProcDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_procDef)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(LanguageParser.ID)
            self.state = 99
            self.match(LanguageParser.LPAREN)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 47:
                self.state = 100
                self.paramList()

            self.state = 103
            self.match(LanguageParser.RPAREN)
            self.state = 104
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ParamContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ParamContext, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_paramList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParamList"):
                listener.enterParamList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParamList"):
                listener.exitParamList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParamList"):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)

    def paramList(self):

        localctx = LanguageParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.param()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 1:
                self.state = 107
                self.match(LanguageParser.T__0)
                self.state = 108
                self.param()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrayParam(self):
            return self.getTypedRuleContext(LanguageParser.ArrayParamContext, 0)

        def objectParam(self):
            return self.getTypedRuleContext(LanguageParser.ObjectParamContext, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_param

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParam"):
                listener.enterParam(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParam"):
                listener.exitParam(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParam"):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)

    def param(self):

        localctx = LanguageParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 7, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.arrayParam()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.objectParam()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(LanguageParser.ID)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayParamContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def arrayDim(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ArrayDimContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ArrayDimContext, i)

        def RANGE(self):
            return self.getToken(LanguageParser.RANGE, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_arrayParam

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArrayParam"):
                listener.enterArrayParam(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArrayParam"):
                listener.exitArrayParam(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArrayParam"):
                return visitor.visitArrayParam(self)
            else:
                return visitor.visitChildren(self)

    def arrayParam(self):

        localctx = LanguageParser.ArrayParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayParam)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(LanguageParser.ID)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 120
                self.arrayDim()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == 7):
                    break

            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 9:
                self.state = 125
                self.match(LanguageParser.RANGE)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 126
                    self.arrayDim()
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == 7):
                        break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayIndexContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def INT(self):
            return self.getToken(LanguageParser.INT, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_arrayIndex

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArrayIndex"):
                listener.enterArrayIndex(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArrayIndex"):
                listener.exitArrayIndex(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArrayIndex"):
                return visitor.visitArrayIndex(self)
            else:
                return visitor.visitChildren(self)

    def arrayIndex(self):

        localctx = LanguageParser.ArrayIndexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayIndex)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not (_la == 47 or _la == 48):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayDimContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(LanguageParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(LanguageParser.RBRACK, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def INT(self):
            return self.getToken(LanguageParser.INT, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_arrayDim

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArrayDim"):
                listener.enterArrayDim(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArrayDim"):
                listener.exitArrayDim(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArrayDim"):
                return visitor.visitArrayDim(self)
            else:
                return visitor.visitChildren(self)

    def arrayDim(self):

        localctx = LanguageParser.ArrayDimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayDim)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(LanguageParser.LBRACK)
            self.state = 136
            _la = self._input.LA(1)
            if not (_la == 47 or _la == 48):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 137
            self.match(LanguageParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectParamContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(LanguageParser.ID)
            else:
                return self.getToken(LanguageParser.ID, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_objectParam

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterObjectParam"):
                listener.enterObjectParam(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitObjectParam"):
                listener.exitObjectParam(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitObjectParam"):
                return visitor.visitObjectParam(self)
            else:
                return visitor.visitChildren(self)

    def objectParam(self):

        localctx = LanguageParser.ObjectParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_objectParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LanguageParser.ID)
            self.state = 140
            self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStmt(self):
            return self.getTypedRuleContext(LanguageParser.AssignmentStmtContext, 0)

        def callStmt(self):
            return self.getTypedRuleContext(LanguageParser.CallStmtContext, 0)

        def printStmt(self):
            return self.getTypedRuleContext(LanguageParser.PrintStmtContext, 0)

        def ifStmt(self):
            return self.getTypedRuleContext(LanguageParser.IfStmtContext, 0)

        def whileStmt(self):
            return self.getTypedRuleContext(LanguageParser.WhileStmtContext, 0)

        def repeatStmt(self):
            return self.getTypedRuleContext(LanguageParser.RepeatStmtContext, 0)

        def forStmt(self):
            return self.getTypedRuleContext(LanguageParser.ForStmtContext, 0)

        def returnStmt(self):
            return self.getTypedRuleContext(LanguageParser.ReturnStmtContext, 0)

        def block(self):
            return self.getTypedRuleContext(LanguageParser.BlockContext, 0)

        def declVectorStmt(self):
            return self.getTypedRuleContext(LanguageParser.DeclVectorStmtContext, 0)

        def SEMI(self):
            return self.getToken(LanguageParser.SEMI, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_stmt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt"):
                listener.enterStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt"):
                listener.exitStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt"):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)

    def stmt(self):

        localctx = LanguageParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 11, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.assignmentStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.callStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.printStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.ifStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.whileStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.repeatStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 148
                self.forStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 149
                self.returnStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 150
                self.block()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 151
                self.declVectorStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 152
                self.match(LanguageParser.SEMI)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(LanguageParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(LanguageParser.RBRACE, 0)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.StmtContext)
            else:
                return self.getTypedRuleContext(LanguageParser.StmtContext, i)

        def BEGIN_KW(self):
            return self.getToken(LanguageParser.BEGIN_KW, 0)

        def END_KW(self):
            return self.getToken(LanguageParser.END_KW, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_block
